[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menu/TitleScreen.gd" type="Script" id=1]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 128.0
margin_top = 66.0
margin_right = 192.0
margin_bottom = 134.0

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
text = "PLAY"

[node name="Credits" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 44.0
text = "CREDITS"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 64.0
margin_bottom = 68.0
text = "QUIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
